<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.king</groupId>
    <artifactId>ioGate</artifactId>
    <version>0.0.1</version>

    <properties>
        <starsector.version>0.97a-RC11</starsector.version>
        <ioGameSDK.version>21.2</ioGameSDK.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>

        <!-- Java SDK -->
        <dependency>
            <groupId>com.iohao.game.sdk</groupId>
            <artifactId>java-sdk</artifactId>
            <version>${ioGameSDK.version}</version>
        </dependency>

        <!-- 日志实现 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.11</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>

        <!-- Library Mods -->
        <dependency>
            <groupId>org.lazywizard</groupId>
            <artifactId>lazylib</artifactId>
            <version>2.8b</version>
        </dependency>
        <dependency>
            <groupId>org.lukas</groupId>
            <artifactId>lunalib</artifactId>
            <version>1.8.4</version>
        </dependency>

        <!-- starsector api -->
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>commons-compiler</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>commons-compiler-jdk</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>fs.common_obf</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>fs.sound_obf</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>janino</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>jinput</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>jogg-0.0.7</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>jorbis-0.0.15</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>json</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>log4j-1.2.9</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>lwjgl</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>lwjgl_util</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>starfarer.api</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>starfarer_obf</artifactId>
            <version>${starsector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.starsector.core</groupId>
            <artifactId>xstream-1.4.10</artifactId>
            <version>${starsector.version}</version>
        </dependency>

    </dependencies>

    <build>
        <sourceDirectory>${basedir}/src</sourceDirectory>
<!--        <directory>${basedir}/jars</directory>-->
<!--        <resources>-->
<!--            <resource>-->
<!--                <directory>${basedir}/resources</directory>-->
<!--            </resource>-->
<!--        </resources>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <!-- maven-shade-plugin 3.5.3 支持 JDK 最高版本为 22-->
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <verbose>true</verbose>
                    <fork>true</fork>
                    <executable>${basedir}/../../jdk-23+7/bin/javac</executable>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${basedir}/jars</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <outputDirectory>${basedir}/jars</outputDirectory>
                    <finalName>ioGate</finalName>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <artifactSet>
                        <excludes>
                            <exclude>org.lazywizard:lazylib</exclude>
                            <exclude>org.lukas:lunalib</exclude>
                            <exclude>com.starsector.core:*</exclude>
                        </excludes>
                    </artifactSet>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>xpp3:xpp3_min</artifact>
                            <excludes>
                                <exclude>org/xmlpull/v1/XmlPullParser.class</exclude>
                                <exclude>org/xmlpull/v1/XmlPullParserException.class</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>io.netty:*</artifact>
                            <excludes>
                                <exclude>META-INF/io.netty.versions.properties</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>org.jctools:jctools-core</artifact>
                            <excludes>
                                <exclude>META-INF/maven/org.jctools/jctools-core/pom.properties</exclude>
                                <exclude>META-INF/maven/org.jctools/jctools-core/pom.xml</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>org.slf4j:slf4j-simple</artifact>
                            <excludes>
                                <exclude>META-INF/versions/9/module-info.class</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer">
                        </transformer>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                            <addHeader>false</addHeader>
                        </transformer>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                    </transformers>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>